k8s/backend-deployment.yaml
#backend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend
        
    spec:
      serviceAccountName: aws-service-account-secret
      containers:
      - name: chatapp-backend
        image: jagdeep144/chatapp_backend:latest
        ports:
        - containerPort: 5001
        volumeMounts:
        - name:  secret-store-aws
          mountPath: "/mnt/secrets" 
          readOnly: true

      volumes:     
      - name: secret-store-aws
        csi: 
         driver: secrets-store.csi.k8s.io
         readOnly: true
         volumeAttributes:
           secretProviderClass: "aws-secrets"



        # env:
        # - name: NODE_ENV
        #   value: production
        # - name: MONGODB_URI
        #   value: "mongodb://mongoadmin:secret@mongodb:27017/chatApp?authSource=admin&retryWrites=true&w=majority"
        # - name: JWT_SECRET
        #   valueFrom: 
        #     secretKeyRef:
        #       name: chatapp-secret
        #       key: jwt
        # - name: PORT 
        #   value: "5001"
