k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat-app
      labels:
        app: frontend 
    spec:
      containers:
      - name: chatapp-frontend
        image: jagdeep144/chatapp_frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "400m"
            memory: "512Mi"
