k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chat-app
spec:
  
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongo-pod
      namespace: chat-app 
      labels:
        app: mongodb
    spec:
      serviceAccountName: aws-service-account-secret
      containers:
      - name: mongodb
        image: mongo 
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: secret-store-aws
          mountPath: "/mnt/secrets"
          readOnly: true
        - name: mongo-storage
          mountPath: /data/db



      volumes:
      - name: secret-store-aws
        csi: 
         driver: secrets-store.csi.k8s.io
         readOnly: true
         volumeAttributes:
           secretProviderClass: "aws-secrets"
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
